Add basic upload and save music feature

--- a/app/views/static/homeStyles.css
+++ b/app/views/static/homeStyles.css
@@ -41,3 +41,8 @@
 #search-results p:hover {
     background-color: #808080;
 }
+
+.flex-container {
+    display: flex;
+    justify-content: space-between; 
+}
