--- a/app/views/templates/home.html
+++ b/app/views/templates/home.html
@@ -6,13 +6,15 @@
     <title>HomePage</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Link to the CSS file -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='tableStyles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='homeStyles.css') }}">
 </head>
 <body>
     <h1> Home </h1>
-    <p> You are logged in! </p>
 
-    <a href="{{ url_for('auth.logout') }}" class="btn btn-primary">Logout</a>
+    <div class="flex-container">
+      <p>You are logged in!</p>
+      <a href="{{ url_for('music.upload_song') }}" class="btn btn-primary">Upload Song</a>
+    </div>
 
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
@@ -23,6 +25,8 @@
         </ul>
       {% endif %}
     {% endwith %}
+    
+    <a href="{{ url_for('auth.logout') }}" class="btn btn-primary">Logout</a>
 
     <hr>
 
