--- a/app/views/templates/login.html
+++ b/app/views/templates/login.html
@@ -22,7 +22,7 @@
 <form method="post">
     {{ form.hidden_tag() }}
     <div>
-        {{ form.username.label }}: {{ form.username() }}
+        {{ form.email.label }}: {{ form.email() }}
     </div>
     <div>
         {{ form.password.label }}: {{ form.password() }}
