front end mvp all set

--- a/app/views/templates/home.html
+++ b/app/views/templates/home.html
@@ -32,7 +32,7 @@
         <!-- Search Bar -->
         <div class="search-container">
             <input type="text" id="song-search" placeholder="Search...">
-            <button id="search-button">Search</button>
+            <!-- <button id="search-button">Search</button> -->
         </div>
         <!-- Your main content goes here -->
         <!-- Ensure the table is outside of the search-container div so that it doesn't interfere with its layout -->
