--- a/app/views/templates/login.html
+++ b/app/views/templates/login.html
@@ -19,7 +19,7 @@
                 <img src="{{ url_for('static', filename='img/logo.png') }}" class="logo mx-auto d-block" alt="logo">
                 <div class="card bg-secondary mt-5">
                     <div class="card-body">
-                        <h3 class="card-title text-center">Music App Log in</h3>
+                        <!-- <h3 class="card-title text-center">Music App Log in</h3> -->
                         <!-- Flash messages here -->
                         {% with messages = get_flashed_messages(with_categories=true) %}
                           {% if messages %}
