--- a/app/views/templates/login.html
+++ b/app/views/templates/login.html
@@ -45,8 +45,8 @@
                         <form method="post">
                             {{ form.hidden_tag() }}
                             <div class="form-group">
-                                {{ form.username.label(class='form-label') }}
-                                {{ form.username(class='form-control') }}
+                                {{ form.email.label(class='form-label') }}
+                                {{ form.email(class='form-control') }}
                             </div>
                             <div class="form-group">
                                 {{ form.password.label(class='form-label') }}
