--- a/app/views/templates/login.html
+++ b/app/views/templates/login.html
@@ -8,37 +8,31 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='customStyles.css') }}">
     <!-- Button Styles -->
     <link rel="stylesheet" href="{{ url_for('static', filename='buttonStyles.css') }}">
-    <!-- Add Bootstrap for styling -->
+    <!-- Bootstrap for styling -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
-
 <body class="login">
+    <!-- Flash messages -->
     {% with messages = get_flashed_messages(with_categories=true) %}
-      {% if messages %}
-        <ul class="flashes">
-        {% for category, message in messages %}
-          <li class="{{ category }}">{{ message }}</li>
-        {% endfor %}
-        </ul>
-      {% endif %}
+        {% if messages %}
+            <ul class="flashes">
+                {% for category, message in messages %}
+                    <li class="{{ category }}">{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
     {% endwith %}
-                  <img src="{{ url_for('static', filename='img/logo.png') }}" class="logo login-logo" alt="logo">
-                  <div class="search">
-                    <div class="row justify-content-center align-items-center" style="height: 100vh;"> This will center the card vertically and horizontally
-                        <div class="col-md-6">
-                            <div class="card bg-secondary mt-5">
-                                <div class="card-body">
 
-                        {% with messages = get_flashed_messages(with_categories=true) %}
-                          {% if messages %}
-                            <ul class="flashes">
-                            {% for category, message in messages %}
-                              <li class="{{ category }}">{{ message }}</li>
-                            {% endfor %}
-                            </ul>
-                          {% endif %}
-                        {% endwith %}
-                        <!-- Login form here -->
+    <!-- Logo -->
+    <img src="{{ url_for('static', filename='img/logo.png') }}" class="logo login-logo" alt="logo">
+
+    <!-- Login Container -->
+    <div class="search">
+        <div class="row justify-content-center align-items-center" style="height: 100vh;"> 
+            <div class="col-md-6">
+                <div class="card bg-secondary mt-5">
+                    <div class="card-body">
+                        <!-- Login Form -->
                         <form method="post">
                             {{ form.hidden_tag() }}
                             <div class="form-group">
@@ -57,15 +51,15 @@
                                 {{ form.submit(class='btn btn-primary') }}
                             </div>
                         </form>
-                        <a href="{{ url_for('auth.register') }}" class="btn btn-link text-white" >Register</a>
-                      </div>
+                        <!-- Register Link -->
+                        <a href="{{ url_for('auth.register') }}" class="btn btn-link text-white">Register</a>
                     </div>
                 </div>
             </div>
-
+        </div>
     </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+    <!-- JavaScript Dependencies -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
