--- a/app/views/templates/login.html
+++ b/app/views/templates/login.html
@@ -79,7 +79,7 @@
                 <!-- Registration Form -->
                 <form method="post">
                     {{ form.hidden_tag() }}
-                    <h3 class="card-title text-center mb-4">Register</h3>
+                    <h3 class="card-title text-center mb-4">Log in to Music</h3>
                     <div class="form-group">
                         {{ form.email.label(class='form-label') }}
                         {{ form.email(class='form-control') }}
