--- a/app/views/templates/home.html
+++ b/app/views/templates/home.html
@@ -24,6 +24,8 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#explore">Explore</a></li>
             <li><a href="#library">Library</a></li>
+            <li><a href="{{ url_for('music.upload_song') }}" class="btn btn-primary">Upload Song</a></li>
+            <li><a href="{{ url_for('auth.logout') }}" class="btn btn-primary btn-logout">Logout</a></li>
         </ul>
     </div>
 
@@ -39,8 +41,6 @@
         {% endif %}
       {% endwith %}
 
-      <a href="{{ url_for('music.upload_song') }}" class="btn btn-primary">Upload Song</a>
-      <a href="{{ url_for('auth.logout') }}" class="btn btn-primary">Logout</a>
       <!-- Search Bar -->
       <div class="search-container">
           <input type="text" id="song-search" placeholder="Search...">
