--- a/app/views/templates/home.html
+++ b/app/views/templates/home.html
@@ -29,6 +29,10 @@
         </ul>
     </div>
 
+    <div class="background-logo">
+        <img src="{{ url_for('static', filename='img/register_logo.jpg') }}" alt="Your Music App Logo" style="width: 300px; height: auto;">
+    </div>
+    
     <!-- Main Content Area -->
     <div class="main-content">
       {% with messages = get_flashed_messages(with_categories=true) %}
