--- a/app/views/templates/home.html
+++ b/app/views/templates/home.html
@@ -26,6 +26,7 @@
             <li><a href="{{ url_for('music.my_songs') }}" class="btn btn-primary">My Songs</a></li>
             <li><a href="#explore">Explore</a></li>
             <li><a href="#library">Library</a></li>
+            <li><a href="{{ url_for('settings.user_settings') }}" class="btn btn-primary btn-settings">Settings</a></li>
             <li><a href="{{ url_for('auth.logout') }}" class="btn btn-primary btn-logout">Logout</a></li>
         </ul>
     </div>
