--- a/app/views/templates/home.html
+++ b/app/views/templates/home.html
@@ -21,10 +21,10 @@
         </a>
         <!-- Navigation Links -->
         <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="{{ url_for('main.home') }}">Home</a></li>
+            <li><a href="{{ url_for('main.explore') }}" class="btn btn-primary">Explore</a></li>
             <li><a href="{{ url_for('music.upload_song') }}" class="btn btn-primary">Upload Song</a></li>
             <li><a href="{{ url_for('music.my_songs') }}" class="btn btn-primary">My Songs</a></li>
-            <li><a href="#explore">Explore</a></li>
             <li><a href="#library">Library</a></li>
             <li><a href="{{ url_for('settings.user_settings') }}" class="btn btn-primary btn-settings">Settings</a></li>
             <li><a href="{{ url_for('auth.logout') }}" class="btn btn-primary btn-logout">Logout</a></li>
