--- a/app/views/static/exploreStyles.css
+++ b/app/views/static/exploreStyles.css
@@ -32,4 +32,25 @@
     margin-bottom: 20px;
 }
 
+#genre-search-results p {
+    cursor: pointer;
+    color: #007bff; /* Adjust the color as needed */
+}
+
+#genre-search-results p:hover {
+    text-decoration: underline;
+}
+
+#top-songs-by-genre {
+    width: 100%;
+    border-collapse: collapse;
+    text-align: center;
+}
+
+#top-songs-by-genre th, #top-songs-by-genre td {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
 #top-songs tr:nth-child(even) {background-color: #f2f2f2;}
+#top-songs-by-genre tr:nth-child(even) {background-color: #f2f2f2;}
